Add getLocalised...() convenience methods to Skyve metadata.